[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/player_up.png" type="Texture" id=2]
[ext_resource path="res://Sounds/grabbing_matchbox.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/match_used.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/wood_pickup.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 16 )

[node name="Player" type="KinematicBody2D" index="0" groups=[
"Player",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
num_of_matches = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="grab_matchbox" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="use_match" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="grab_wood" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


